@@ -6,12 +6,14 @@ AUX PortageXS-0.02.10-portage_path_fix.patch 4165 SHA256 760e70cd04ff0922d3d1bd4
 AUX PortageXS-0.02.10-prefix.patch 6463 SHA256 11b0aca23516f59362ffe56d12d4718d8843935502ed4df17463bff6d39b0d01 SHA512 1225da7ef7911f8a3ada93f2d23ffd23e78bec735152403b809db75cda99fc576bc34fbbcd8487af16b3fadd946bc4c48497db9a4e9f9bf27705b91793d5ea37 WHIRLPOOL 39b98d5f9587596447370ec7c523fbf3e64f41bff4ae416e8a7b38aa2b03a9f4d05164d3fdfbb2d8425a7f33ee844465448e0bf140828780e30d82647c4750d9
 DIST PortageXS-0.02.10.tar.gz 28890 SHA256 1d41222577243d8fa004ce3dfeb67dce95c10339218ee1097d972cb8f97862c2 SHA512 8f5a6cf8fa415e13401fd7901c81fef42e0cee81b7a9c1f276cce9582c705ac7e2004ec213033fce065f965445342ed0140d8b752d2e857dd40c620ed4af6b1b WHIRLPOOL 3c7d41f5d5647ba4f31ef8d07f5172bf76c1ccb443443df37e526a91f76e1353c6c04941077d45a89d8b08d68b0b263dab5a08b923d6fb0faad1572c8c292333
 EBUILD PortageXS-0.02.10-r3.ebuild 1594 SHA256 fd65997ee9b914936111f4b3d9f0a4a8ca877d5cfeec1fd6d06e6edc28fe1957 SHA512 68233615643ce509e6871751a2e2cdb1a0e0860c9566b1f6f0ee05c983ff078bf0c629b5abc5dc26f19fe2e3b03799eb37fa022d9f9d609c883d32cb5c7c7a85 WHIRLPOOL c886e64c068bc4ddfa44ff8c119a4c77914efb752ab51a2efe7918f8af30489d4b03a7d64ad2a88d29d440a4b8b98df2cad1c0a6f0de2c16eca6e98142dec83f
-MISC ChangeLog 7557 SHA256 e972c10368d486f4d259afcd9474ca4055c15ccd52e9566e52a7b648af9e39a2 SHA512 252f9fbab2ac88d7ff1b91e9f7f3eeb547a08e4b925713ed9dc769f2b33728836b39b0e9e289ae7f9797cea27b31fd56c968ac3f865f6f1211e1094bfaa1d29d WHIRLPOOL 5506d925ac0dc99e2eafe90da9adab58978a169ba1bb1c5d8016068c33eb97886eebe6cb4574520da3686c55eaa46ede05cf45de249328e7f038dc029dbc7ee0
-MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
+MISC ChangeLog 7693 SHA256 76c76e73866072a0d4c8a731663d678e85747da7433aa0582b56a9df3b61fe44 SHA512 318b8b15b3df255a514e56fe3fe5a147ed23f273bc58c45e8024a5bdc46a039a25954d93882de86e64fa5a688a5a80e72769be33c98beb92bb2a5bc43a7bf40d WHIRLPOOL af930c2c643b10da85e8e7524e239dbbeabd2c99a9987eed0f60001990d9caf0bdc00a5a019659ea7f843dafdd04b9cb35985fcfaabef0b559756cea63f320bf
+MISC metadata.xml 346 SHA256 3dc1c726552539d9fd4318bea9a68d980577473e4c1411773393038ae996dae6 SHA512 c910796d676050d2fc9f3ab02d5beba1bd1053bc247f2f1b6ba2d55259605fbe6726620e2d6f1883dc001cd882571dde9bb6b216dbdeb507d6b1b332ea07cf46 WHIRLPOOL 8912f64cc9414337c92330c294e9c6b04a219f8cb6428bdd7769b069917b84e9628b3c35170c4603c2c1ef0168daeb3943f0b21d2cc74240f1528cac68664218
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlDlRW0ACgkQuQc30/atMkCBvQCgrp6eh3I+JuzRbGLHj/fFo7ED
-0dQAn0c5FCO+yiuNzZjFW5YZkhWZB76u
-=m5c+
+iJwEAQEIAAYFAlHumv4ACgkQG9wOWsQutdbIXgP/R3RQhdD86g6JQry2qjaiEJas
+05QW8Zb1qG+gBJw/qP4FVHOzq7SNV2Mp6NwHbCTVTkn5g0vQGMdfVt79z55Q9CzQ
+XTyMZtBY3+kZ//bM7VepEMtNIUROpxoS4GW7dMhH6ItybDjiJbWX2GUZRWVAwTI2
+TfAj43PVoSNmFfDP3y4=
+=18m6
 -----END PGP SIGNATURE-----
