@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PortageXS
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.56 2013/01/03 08:46:32 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.57 2013/07/23 15:01:45 zlogene Exp $
+
+  23 Jul 2013; Mikle Kolyada <zlogene@gentoo.org> metadata.xml:
+  Package will be maintained by Kent Fredric through proxy maintainers
 
 *PortageXS-0.02.10-r3 (03 Jan 2013)
 
